5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4123/executions/1709_3039.log
== SUBMITION (2019-05-02 11:17:42) 
-- CODE:
from math import*
x = float(input())

if -1<=x<(-1/2) or (1/2)<x<=1:
	fx = asin(x)
	fx = degrees(x)
	print(round(fx,2))
elif (-1/2)<=x<=(1/2):
	fx = acos(x)
	fx = degrees(x)
	print(round(fx,2))
else:
	print("entrada invalida")
-- EXECUTION TIME:
0.156603
-- TEST CASE 1:
---- input:
-0.99
---- correct output:
-81.89
---- user output:
-56.72
-- TEST CASE 2:
---- input:
1.51
---- correct output:
entrada invalida
---- user output:
entrada invalida
-- TEST CASE 3:
---- input:
-0.21
---- correct output:
102.12
---- user output:
-12.03
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:17:44) 
-- CODE:
from math import*
x = float(input())

if -1<=x<(-1/2) or (1/2)<x<=1:
	fx = asin(x)
	fx = degrees(x)
	print(round(fx,2))
elif (-1/2)<=x<=(1/2):
	fx = acos(x)
	fx = degrees(x)
	print(round(fx,2))
else:
	print("entrada invalida")
-- OUTPUT:
-56.72
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:17:57) 
-- CODE:
from math import*
x = float(input())

if -1<=x<(-1/2) or (1/2)<x<=1:
	fx = asin(x)
	fx = degrees(x)
	print(round(fx,2))
elif (-1/2)<=x<=(1/2):
	fx = acos(x)
	fx = degrees(x)
	print(round(fx,2))
else:
	print("entrada invalida")
-- OUTPUT:
-56.72
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:18:00) 
-- CODE:
from math import*
x = float(input())

if -1<=x<(-1/2) or (1/2)<x<=1:
	fx = asin(x)
	fx = degrees(x)
	print(round(fx,2))
elif (-1/2)<=x<=(1/2):
	fx = acos(x)
	fx = degrees(x)
	print(round(fx,2))
else:
	print("entrada invalida")
-- OUTPUT:
-56.72
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:18:35) 
-- CODE:
from math import*
x = float(input())

if -1<=x<(-1/2) or (1/2)<x<=1:
	fx = asin(x)
	fx = degrees(x)
	print(round(fx,2))
elif (-1/2)<=x and x<=(1/2):
	fx = acos(x)
	fx = degrees(x)
	print(round(fx,2))
else:
	print("entrada invalida")
-- OUTPUT:
-56.72
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:18:51) 
-- CODE:
from math import*
x = float(input())

if -1<=x and x<(-1/2) or (1/2)<x and x<=1:
	fx = asin(x)
	fx = degrees(x)
	print(round(fx,2))
elif (-1/2)<=x and x<=(1/2):
	fx = acos(x)
	fx = degrees(x)
	print(round(fx,2))
else:
	print("entrada invalida")
-- OUTPUT:
-56.72
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 11:19:51) 
-- CODE:
from math import*
x = float(input())

if (-1<=x and x<(-1/2)) or ((1/2)<x and x<=1):
	fx = asin(x)
	fx = degrees(x)
	print(round(fx,2))
elif (-1/2)<=x and x<=(1/2):
	fx = acos(x)
	fx = degrees(x)
	print(round(fx,2))
else:
	print("entrada invalida")
-- EXECUTION TIME:
0.18072
-- TEST CASE 1:
---- input:
-0.99
---- correct output:
-81.89
---- user output:
-56.72
-- TEST CASE 2:
---- input:
1.51
---- correct output:
entrada invalida
---- user output:
entrada invalida
-- TEST CASE 3:
---- input:
-0.21
---- correct output:
102.12
---- user output:
-12.03
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:19:52) 
-- CODE:
from math import*
x = float(input())

if (-1<=x and x<(-1/2)) or ((1/2)<x and x<=1):
	fx = asin(x)
	fx = degrees(x)
	print(round(fx,2))
elif (-1/2)<=x and x<=(1/2):
	fx = acos(x)
	fx = degrees(x)
	print(round(fx,2))
else:
	print("entrada invalida")
-- OUTPUT:
-56.72
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:20:58) 
-- CODE:
from math import*
x = float(input())

if (x>=-1 and x<(-1/2)) or (x<1/2 and x<=1):
	fx = asin(x)
	fx = degrees(x)
	print(round(fx,2))
elif x>=-1/2 and x<=(1/2):
	fx = acos(x)
	fx = degrees(x)
	print(round(fx,2))
else:
	print("entrada invalida")
-- OUTPUT:
-56.72
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:21:11) 
-- CODE:
from math import*
x = float(input())

if (x>=-1 and x<(-1/2)) or (x<1/2 and x<=1):
	fx = acos(x)
	fx = degrees(x)
	print(round(fx,2))
elif x>=-1/2 and x<=(1/2):
	fx = asin(x)
	fx = degrees(x)
	print(round(fx,2))
else:
	print("entrada invalida")
-- OUTPUT:
-56.72
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:21:53) 
-- CODE:
from math import*
x = float(input())

if (x>=-1 and x<-0.5 or (x<0.5 and x<=1):
	fx = asin(x)
	fx = degrees(x)
	print(round(fx,2))
elif x>=-0.5 and x<=0.5:
	fx = acos(x)
	fx = degrees(x)
	print(round(fx,2))
else:
	print("entrada invalida")
-- ERROR:
File "XXXX", line 4
    if (x>=-1 and x<-0.5 or (x<0.5 and x<=1):
                                            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:22:05) 
-- CODE:
from math import*
x = float(input())

if (x>=-1 and x<-0.5) or (x<0.5 and x<=1):
	fx = asin(x)
	fx = degrees(x)
	print(round(fx,2))
elif x>=-0.5 and x<=0.5:
	fx = acos(x)
	fx = degrees(x)
	print(round(fx,2))
else:
	print("entrada invalida")
-- OUTPUT:
-56.72
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:22:45) 
-- CODE:
from math import*
x = float(input())

if (x>=-1 and x<-0.5) or (x<0.5 and x<=1):
	fx = asin(x)
	#fx = degrees(x)
	print(round(fx,2))
elif x>=-0.5 and x<=0.5:
	fx = acos(x)
	#fx = degrees(x)
	print(round(fx,2))
else:
	print("entrada invalida")
-- OUTPUT:
-1.43
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:23:11) 
-- CODE:
from math import*
x = float(input())

if (x>=-1 and x<-0.5) or (x<0.5 and x<=1):
	x = degrees(x)
	fx = asin(x)
	
	print(round(fx,2))
elif x>=-0.5 and x<=0.5:
	fx = acos(x)
	#fx = degrees(x)
	print(round(fx,2))
else:
	print("entrada invalida")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    fx = asin(x)
ValueError: math domain error
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 11:23:45) 
-- CODE:
from math import*
x = float(input())

if (x>=-1 and x<-0.5) or (x<0.5 and x<=1):
	fx = asin(x)
	fx = degrees(fx)
	print(round(fx,2))
elif x>=-0.5 and x<=0.5:
	fx = acos(x)
	fx = degrees(fx)
	print(round(fx,2))
else:
	print("entrada invalida")
-- EXECUTION TIME:
0.170556
-- TEST CASE 1:
---- input:
-0.99
---- correct output:
-81.89
---- user output:
-81.89
-- TEST CASE 2:
---- input:
1.51
---- correct output:
entrada invalida
---- user output:
entrada invalida
-- TEST CASE 3:
---- input:
-0.21
---- correct output:
102.12
---- user output:
-12.12
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:23:47) 
-- CODE:
from math import*
x = float(input())

if (x>=-1 and x<-0.5) or (x<0.5 and x<=1):
	fx = asin(x)
	fx = degrees(fx)
	print(round(fx,2))
elif x>=-0.5 and x<=0.5:
	fx = acos(x)
	fx = degrees(fx)
	print(round(fx,2))
else:
	print("entrada invalida")
-- OUTPUT:
-81.89
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:24:04) 
-- CODE:
from math import*
x = float(input())

if (x>=-1 and x<-0.5) or (x<0.5 and x<=1):
	fx = asin(x)
	fx = degrees(fx)
	print(round(fx,2))
elif x>=-0.5 and x<=0.5:
	fx = acos(x)
	fx = degrees(fx)
	print(round(fx,2))
else:
	print("entrada invalida")
-- OUTPUT:
-81.89
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:24:16) 
-- CODE:
from math import*
x = float(input())

if (x>=-1 and x<-0.5) or (x<0.5 and x<=1):
	fx = acos(x)
	fx = degrees(fx)
	print(round(fx,2))
elif x>=-0.5 and x<=0.5:
	fx = asin(x)
	fx = degrees(fx)
	print(round(fx,2))
else:
	print("entrada invalida")
-- OUTPUT:
171.89
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 11:24:20) 
-- CODE:
from math import*
x = float(input())

if (x>=-1 and x<-0.5) or (x<0.5 and x<=1):
	fx = acos(x)
	fx = degrees(fx)
	print(round(fx,2))
elif x>=-0.5 and x<=0.5:
	fx = asin(x)
	fx = degrees(fx)
	print(round(fx,2))
else:
	print("entrada invalida")
-- EXECUTION TIME:
0.146558
-- TEST CASE 1:
---- input:
-0.99
---- correct output:
-81.89
---- user output:
171.89
-- TEST CASE 2:
---- input:
1.51
---- correct output:
entrada invalida
---- user output:
entrada invalida
-- TEST CASE 3:
---- input:
-0.21
---- correct output:
102.12
---- user output:
102.12
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:24:22) 
-- CODE:
from math import*
x = float(input())

if (x>=-1 and x<-0.5) or (x<0.5 and x<=1):
	fx = acos(x)
	fx = degrees(fx)
	print(round(fx,2))
elif x>=-0.5 and x<=0.5:
	fx = asin(x)
	fx = degrees(fx)
	print(round(fx,2))
else:
	print("entrada invalida")
-- OUTPUT:
171.89
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:24:33) 
-- CODE:
from math import*
x = float(input())

if (x>=-1 and x<-0.5) or (x<0.5 and x<=1):
	fx = acos(x)
	fx = degrees(fx)
	print(round(fx,2))
elif x>=-0.5 and x<=0.5:
	fx = asin(x)
	fx = degrees(fx)
	print(round(fx,2))
else:
	print("entrada invalida")
-- OUTPUT:
171.89
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:24:53) 
-- CODE:
from math import*
x = float(input())

if (x>=-1 and x<-0.5) or (x<0.5 and x<=1):
	fx = acos(x)
	fx = degrees(fx)
	print(round(fx,2))
elif x>=-0.5 and x<=0.5:
	fx = asin(x)
	fx = degrees(fx)
	print(round(fx,2))
else:
	print("entrada invalida")
-- OUTPUT:
171.89
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:25:17) 
-- CODE:
from math import*
x = float(input())

if (x>=-1 and x<-0.5) or (x>0.5 and x<=1):
	fx = acos(x)
	fx = degrees(fx)
	print(round(fx,2))
elif x>=-0.5 and x<=0.5:
	fx = asin(x)
	fx = degrees(fx)
	print(round(fx,2))
else:
	print("entrada invalida")
-- OUTPUT:
171.89
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 11:25:22) 
-- CODE:
from math import*
x = float(input())

if (x>=-1 and x<-0.5) or (x>0.5 and x<=1):
	fx = acos(x)
	fx = degrees(fx)
	print(round(fx,2))
elif x>=-0.5 and x<=0.5:
	fx = asin(x)
	fx = degrees(fx)
	print(round(fx,2))
else:
	print("entrada invalida")
-- EXECUTION TIME:
0.154523
-- TEST CASE 1:
---- input:
-0.99
---- correct output:
-81.89
---- user output:
171.89
-- TEST CASE 2:
---- input:
1.51
---- correct output:
entrada invalida
---- user output:
entrada invalida
-- TEST CASE 3:
---- input:
-0.21
---- correct output:
102.12
---- user output:
-12.12
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:25:28) 
-- CODE:
from math import*
x = float(input())

if (x>=-1 and x<-0.5) or (x>0.5 and x<=1):
	fx = acos(x)
	fx = degrees(fx)
	print(round(fx,2))
elif x>=-0.5 and x<=0.5:
	fx = asin(x)
	fx = degrees(fx)
	print(round(fx,2))
else:
	print("entrada invalida")
-- OUTPUT:
171.89
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:25:44) 
-- CODE:
from math import*
x = float(input())

if (x>=-1 and x<-0.5) or (x>0.5 and x<=1):
	fx = asin(x)
	fx = degrees(fx)
	print(round(fx,2))
elif x>=-0.5 and x<=0.5:
	fx = acos(x)
	fx = degrees(fx)
	print(round(fx,2))
else:
	print("entrada invalida")
-- OUTPUT:
-81.89
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:25:48) 
-- CODE:
from math import*
x = float(input())

if (x>=-1 and x<-0.5) or (x>0.5 and x<=1):
	fx = asin(x)
	fx = degrees(fx)
	print(round(fx,2))
elif x>=-0.5 and x<=0.5:
	fx = acos(x)
	fx = degrees(fx)
	print(round(fx,2))
else:
	print("entrada invalida")
-- OUTPUT:
-81.89
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:25:51) 
-- CODE:
from math import*
x = float(input())

if (x>=-1 and x<-0.5) or (x>0.5 and x<=1):
	fx = asin(x)
	fx = degrees(fx)
	print(round(fx,2))
elif x>=-0.5 and x<=0.5:
	fx = acos(x)
	fx = degrees(fx)
	print(round(fx,2))
else:
	print("entrada invalida")
-- OUTPUT:
-81.89
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:25:54) 
-- CODE:
from math import*
x = float(input())

if (x>=-1 and x<-0.5) or (x>0.5 and x<=1):
	fx = asin(x)
	fx = degrees(fx)
	print(round(fx,2))
elif x>=-0.5 and x<=0.5:
	fx = acos(x)
	fx = degrees(fx)
	print(round(fx,2))
else:
	print("entrada invalida")
-- OUTPUT:
-81.89
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 11:25:58) 
-- CODE:
from math import*
x = float(input())

if (x>=-1 and x<-0.5) or (x>0.5 and x<=1):
	fx = asin(x)
	fx = degrees(fx)
	print(round(fx,2))
elif x>=-0.5 and x<=0.5:
	fx = acos(x)
	fx = degrees(fx)
	print(round(fx,2))
else:
	print("entrada invalida")
-- EXECUTION TIME:
0.174308
-- TEST CASE 1:
---- input:
-0.99
---- correct output:
-81.89
---- user output:
-81.89
-- TEST CASE 2:
---- input:
1.51
---- correct output:
entrada invalida
---- user output:
entrada invalida
-- TEST CASE 3:
---- input:
-0.21
---- correct output:
102.12
---- user output:
102.12
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
